Add Getting Started slide

--- a/git.tex
+++ b/git.tex
@@ -1,6 +1,7 @@
 \documentclass[14pt]{beamer}
 \usepackage[latin1]{inputenc}
 \usepackage{graphics}
+\usepackage{hyperref}
 \usetheme{Warsaw}
 \setbeamertemplate{navigation symbols}{}
 \title{The Basics of Git}
@@ -46,14 +47,21 @@
 
 
 \begin{frame}{Getting started}
-	Installing git
-		mSysGit
-	Github
-		Fork
-		Clone
-		Commit
-		Push
-		Merge/Pull Request
+	\begin{enumerate}
+		\small
+		\item Install git. (mSysGit on Windows)\newline
+		\href{http://msysgit.googlecode.com/files/Git-1.7.11-preview20120710.exe}{http://msysgit.googlecode.com/files/Git...}
+		\href{http://goo.gl/uXDLa}{http://goo.gl/uXDLa}
+		\item Get a github account
+		\item Set up SSH keys
+		\item Forking a repository\newline
+		\href{https://github.com/guywithnose/Git-training}{https://github.com/guywithnose/Git-training}
+		\href{http://goo.gl/EDor7}{http://goo.gl/EDor7}
+		\item Clone your fork
+		\item Commit
+		\item Push
+		\item Merge/Pull Request
+	\end{enumerate}
 \end{frame}
 
 
