Add branch slides

--- a/git.tex
+++ b/git.tex
@@ -106,4 +106,18 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}{How do we use branches?}
+	\begin{figure}[htb]
+		\centering
+		\includegraphics[width=.7\textwidth]{hotfix.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{How do we use branches?}
+	\begin{figure}[htb]
+		\centering
+		\includegraphics[width=.7\textwidth]{hotfix2.png}
+	\end{figure}
+\end{frame}
+
 \end{document}
