--- a/git.tex
+++ b/git.tex
@@ -32,18 +32,20 @@
 	and full access to internals.
 \end{frame}
 
-\begin{frame}{What is Git?}
-	\begin{itemize}
-		\item Git is flexible for many different workflows.
-		\item Git is non-linear.
-		\item Git stores all data locally and is therefore much faster.
-		\item Git is distributed.  This means it allows for many
-			developers to work independenty, yet collaboratively.
-		\item Git allows a deveoper to seamlessly switch between features(branches).
-		\item Git allows for disposable experimentation.
-	\end{itemize}
+\begin{frame}{Git vs SVN}
+	\begin{table}[position specifier]
+		\centering
+		\begin{tabular}{|l|l|}
+			\hline
+			\multicolumn{1}{|c|}{Git} & \multicolumn{1}{|c|}{SVN} \\ \hline
+			Distributed & Centralized \\ \hline
+			Non-Linear & Linear \\ \hline
+			Flexible & Strict Structure \\ \hline
+			History is stored locally & History on remote server \\
+			\hline
+		\end{tabular}
+	\end{table}
 \end{frame}
-
 
 \begin{frame}{Getting started}
 	\begin{enumerate}
@@ -57,9 +59,6 @@
 		\href{https://github.com/guywithnose/Git-training}{https://github.com/guywithnose/Git-training}
 		\href{http://goo.gl/EDor7}{http://goo.gl/EDor7}
 		\item Clone your fork
-		\item Commit
-		\item Push
-		\item Merge/Pull Request
 	\end{enumerate}
 \end{frame}
 
@@ -116,6 +115,22 @@
 	\begin{figure}[htb]
 		\centering
 		\includegraphics[width=.7\textwidth]{hotfix2.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Mergeing vs Rebasing}
+	Merge
+	\begin{figure}[htb]
+		\centering
+		\includegraphics[width=.7\textwidth]{merge.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Mergeing vs Rebasing}
+        Rebase
+	\begin{figure}[htb]
+		\centering
+		\includegraphics[width=.7\textwidth]{rebase.png}
 	\end{figure}
 \end{frame}
 
